syntax = "proto3";

package storemessage;
option java_multiple_files = true;
option java_package = "ru.ibelan.store_message_service";

service StoreMessageService {
	rpc StoreMessage (StoreMessageRequest) returns (StoreMessageResponse);
}

message StoreMessageRequest {
	string player_id = 1;
	string text = 2;
}

message StoreMessageResponse {
	int32 error_code = 1;
	string status_message = 2;
}
